# token/internal/models/dto.go
@@ -1,0 +1,11 @@
+package models
+
+type IssueToken struct {
+	Namespace string
+}
+
+func FromRequest(r IssueTokenRequest) IssueToken {
+	return IssueToken{
+		Namespace: r.Namespace,
+	}
+}
