# token/internal/models/models.gen.go
@@ -1,0 +1,62 @@
+// Package models provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
+package models
+
+import (
+	"time"
+)
+
+// Image defines model for Image.
+type Image struct {
+	// Name Image name
+	Name string `json:"name"`
+
+	// Tag Image tag
+	Tag string `json:"tag"`
+}
+
+// IssueTokenRequest defines model for IssueTokenRequest.
+type IssueTokenRequest struct {
+	// Namespace namespace
+	Namespace string `json:"namespace"`
+}
+
+// Server defines model for Server.
+type Server struct {
+	// CreatedAt Creation timestamp
+	CreatedAt time.Time `json:"createdAt"`
+
+	// Id Server (Pod) ID
+	Id string `json:"id"`
+
+	// Image Image name
+	Image string `json:"image"`
+
+	// Name Server (Pod) name
+	Name string `json:"name"`
+
+	// Status Server (Pod) status
+	Status string `json:"status"`
+}
+
+// ServerCreateRequest defines model for ServerCreateRequest.
+type ServerCreateRequest struct {
+	// Image Image name
+	Image string `json:"image"`
+
+	// Name Server (Pod) name
+	Name string `json:"name"`
+}
+
+// Token defines model for Token.
+type Token struct {
+	// Token JWT string
+	Token string `json:"token"`
+}
+
+// PostServersJSONRequestBody defines body for PostServers for application/json ContentType.
+type PostServersJSONRequestBody = ServerCreateRequest
+
+// PostTokensJSONRequestBody defines body for PostTokens for application/json ContentType.
+type PostTokensJSONRequestBody = IssueTokenRequest
